[project]
name = "pawzzle"
version = "0.1.0"
description = "Pawzzle: a game about dogs"
dependencies = [
    "fastapi>=0.111.1",
    "sqlalchemy>=2.0.31",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.1",
]

[tool.rye.scripts]
test = "pytest"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pawzzle"]
