[project]
name = "pawzzle"
version = "0.1.0"
description = "Pawzzle: a game about dogs"
dependencies = [
    "fastapi>=0.111.1",
    "sqlalchemy>=2.0.31",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.3.4",
    "python-dotenv>=1.0.1",
    "alembic>=1.13.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.1",
    "coverage>=7.6.0",
    "isort>=5.13.2",
    "mypy>=1.11.1",
]

[tool.rye.scripts]
dev = "fastapi dev src/pawzzle/main.py"
test = "pytest"
cov = { chain = ["cov:run", "cov:report"]}
"cov:run" = "coverage run --source=src/pawzzle -m pytest"
"cov:report" = "coverage report -m"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pawzzle"]

[tool.isort]
profile = "black"
